website category section is ready

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,17 @@
 .panda-bg-info{
     background-color: #fceae8;
 }
+
+.cat1{
+    background-color: orange;
+}
+.cat2{
+    background-color: orchid;
+}
+.cat3{
+    background-color: blue;
+}
+
 .categories img{
     width: 100px;
 }
